--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -202,7 +202,7 @@ n_{\rm O, 1} n_{\rm P, 2} &> \frac{ N_{2} } { 2m }.
 \end{align}
 Roughly speaking, required sample size to ensure above conditions is that $n>\sqrt{N_2}$, where $n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$. It should be noted that very tiny $m$, which dramatically increases the required sample size, produces significant genetic differences between two populations. In such a case, there are several methods to estimate migration rate by population genetics technique; alternatively, we focus the situation of moderate/large migration rate, which leads little genetic differences between two populations (see details in {\bf Discussion} section). 
 
-Other guidance for the required sample size is obtained by an approximate lower bound on the CV (coefficient of variation) of $M_1$ or $m_1$, which is defined by $1/\sqrt{H_{\rm HS, bet}}$. For example, to achieve a 30\% CV, the target of $H_{\rm HS, bet}$ is more than 10, providing the required sample size when population parameters are given (e.g., $N_1$, $N_2$ and $M$). Similarly, the CV of $M_2$ or $m_2$, defined by $1/\sqrt{H_{\rm PO, bet}}$, provides the required sample size for estimating $M_2$ or $m_2$. 
+Other guidance for the required sample size is obtained by an approximate lower bound on the CV (coefficient of variation) of $M_1$ or $m_1$, defined by $1/\sqrt{H_{\rm HS, bet}}$, which is applied in the context of a classic mark-recapture \cite[]{seber1982estimation} or close-kin mark-recapture \cite[]{bravington2016close}. For example, to achieve a 30\% CV, the target of $H_{\rm HS, bet}$ is more than 10, providing the required sample size when population parameters are given (e.g., $N_1$, $N_2$ and $M$). Similarly, the CV of $M_2$ or $m_2$, defined by $1/\sqrt{H_{\rm PO, bet}}$, provides the required sample size for estimating $M_2$ or $m_2$. 
 
 \subsection{Efficient use of kinship pairs found between populations}
 
